# report-generator

./: .gitignore  .~lock.report.docx#  Cargo.toml
exe/: Cruz.json  WAIS-IV.json
src/: client.rs  client_data.rs  lib.rs  main.rs  menus.rs  prints.rs  report.rs  test.rs
