[package]
name = "jareds-program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"docx-rs" = "0.2.13"
"serde" = {version = "1.0", features = ["derive"]}
"serde_json" = "1.0"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
